# audiofingerprint

./: CMakeLists.txt  LICENSE  README.md  build.sh  build_af.sh  build_arm7.sh  install.cmake  install_gnsdk_libs.sh  license.lic  make_gnsdk_symlinks.sh  settings_af.json
CMake/Modules/: FindGracenoteSDK.cmake
src/: AudioSource.cpp  AudioSource.h  Processor.cpp  Processor.h  SimpleLogger.cpp  SimpleLogger.h  StatusEventsHandler.cpp  StatusEventsHandler.h  UserStorage.cpp  UserStore.cpp  UserStore.h  main.cpp
